# UPV_EARTH_PROYECTOIII

./: .gitignore  README.md  analisis_corpus_eda.py  eval_gemma4_26b_advanced.csv  extraccion_corpus_mixto.py  extraccion_corpus_mixto_balanced.py  extraccion_documents.ipynb  pyproject.toml  test_auth.txt
.runtime/pids/: backend.pid  frontend.pid
LLM/: eval_gemma4_26b_strict_confidence.csv  gemma4_26.py  prompt.py
corpus_PB/: README.md
corpus_PB/data/: README.md  lectura_corpus.ipynb  pb_corpus_documents.csv  pb_keyword_traceability.csv  pb_reference.csv
corpus_PB/docs/: README.md  corpus_pb_methodology.tex
corpus_PB/references/: README.md
data/corpus/: master_corpus_mixto_1000_clean.csv
docs/: MUESTREO_ESTRATIFICADO.md  ORGANIZACION_REPO.md  bert_embeddings_inputs.md  entorno-python.md  flujo_extraccion_1000.md  guia-ssh-vscode.md
docs/eda/: complejidad_abstract_por_pb_summary.csv  corpus_distribution_analysis.ipynb  drop_reason_combinations.csv  eda_summary.md  null_table.csv  pb_doc_counts.csv  semantic_topic_cluster_summary.csv  semantic_topic_clusters.csv  similitud_pb_por_corpus_completo.csv  similitud_pb_por_corpus_completo_top_pairs.csv  similitud_pb_por_embeddings_semanticos.csv  (+9 more)
mockup/: .env  .env.example  AGENTS.md  DESIGN.md  README.md  docker-compose.yml
muestras/: _sample_paths.tmp  muestra_seleccionada_1000.csv  muestra_seleccionada_1000_balanced.csv
prompts/: contexto_agente_codigo_upv_earth_m_2.md  prompt.py
scripts/: ## Plan Refinado: Plataforma UPV-EARTH v.prompt.md  ## Plan: Plataforma Web UPV-EARTH v1.prompt.md  web_services.sh
(+91 files in other folders)
